<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="30dip"
        android:text="@string/home_one"
        android:textColor="@color/sharese" />

    <Button
        android:id="@+id/button_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="30dip"
        android:text="@string/home_two"
        android:textColor="@color/sharese" />

    <Button
        android:id="@+id/button_slidingpane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="30dip"
        android:text="@string/home_three"
        android:textColor="@color/sharese" />

    <Button
        android:id="@+id/slidingmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="30dip"
        android:text="slidingmenu"
        android:textColor="@color/sharese" />

</LinearLayout>